--- a/CSharp/CSharp/CSharp.csproj
+++ b/CSharp/CSharp/CSharp.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <None Include="bin\Debug\netcoreapp2.2\Excel\cell.xls" />
+    <None Include="bin\Debug\netcoreapp2.2\Excel\comment.xls" />
     <None Include="bin\Debug\netcoreapp2.2\Excel\empty.xls" />
     <None Include="bin\Debug\netcoreapp2.2\Excel\summary.xls" />
   </ItemGroup>
