--- a/CSharp/CSharp/CSharp.csproj
+++ b/CSharp/CSharp/CSharp.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="ImpromptuInterface" Version="7.0.1" />
+    <PackageReference Include="System.Reactive" Version="4.1.3" />
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.4.*" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.4.*" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.4.*" />
