--- a/CSharp/CSharp/CSharp.csproj
+++ b/CSharp/CSharp/CSharp.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <Folder Include="Client\" />
+    <Folder Include="Udp\" />
+    <Folder Include="Tcp\" />
   </ItemGroup>
 
 </Project>
