--- a/CSharp/CSharp.Framework/CSharp.Framework.csproj
+++ b/CSharp/CSharp.Framework/CSharp.Framework.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,8 +42,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Des\DesAlgorithm.cs" />
+    <Compile Include="Email\EmailHelper.cs" />
+    <Compile Include="Email\Logger.cs" />
+    <Compile Include="Email\TimerLog.cs" />
+    <Compile Include="Helper\SecurityHelper.cs" />
+    <Compile Include="Helper\SerializeHelper.cs" />
+    <Compile Include="Helper\UnityToolHelper.cs" />
+    <Compile Include="Helper\WebHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transfer\AnalysisGDOCPosInfo.cs" />
+    <Compile Include="Transfer\GDOCCmdList.cs" />
+    <Compile Include="Transfer\GDOCSender.cs" />
+    <Compile Include="Transfer\GDOCTypeList.cs" />
+    <Compile Include="Transfer\JsonModel\GDOCEmpty.cs" />
+    <Compile Include="Transfer\JsonModel\GDOCOrg.cs" />
+    <Compile Include="Transfer\JsonModel\GDOCPos.cs" />
+    <Compile Include="Transfer\JsonModel\GDOCResult.cs" />
+    <Compile Include="Transfer\JsonModel\GDOCVehicle.cs" />
+    <Compile Include="Transfer\JsonModel\GDOCVehicleResult.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Email\account.txt" />
+    <None Include="Transfer\TexiModel.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Transfer\TaxiType.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
