--- a/CSharp/CSharp.NetFramework/CSharp.NetFramework.csproj
+++ b/CSharp/CSharp.NetFramework/CSharp.NetFramework.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gis\WebGis.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tcp\TcpChannelComm.cs" />
