--- a/CSharp/CSharp.Framework/CSharp.Framework.csproj
+++ b/CSharp/CSharp.Framework/CSharp.Framework.csproj
@@ -77,10 +77,14 @@
     <Compile Include="Face\V2_2\Constant\ASF_Operation.cs" />
     <Compile Include="Face\V2_2\Constant\ASF_OrientPriority.cs" />
     <Compile Include="Face\V2_2\Data\ASF_ActiveFileInfo.cs" />
+    <Compile Include="Face\V2_2\Data\ASF_FaceFeature.cs" />
     <Compile Include="Face\V2_2\Data\ASF_MultiFaceInfo.cs" />
+    <Compile Include="Face\V2_2\Data\ASF_SingleFaceInfo.cs" />
     <Compile Include="Face\V2_2\Data\ImageInfo.cs" />
     <Compile Include="Face\V2_2\Data\MRECT.cs" />
     <Compile Include="Face\V2_2\Error\ASF_ErrorCode.cs" />
+    <Compile Include="Face\V2_2\FaceRecolonization.cs" />
+    <Compile Include="Face\V2_2\FaceUtil.cs" />
     <Compile Include="Face\V2_2\ImageUtil.cs" />
     <Compile Include="Face\V2_2\MemoryUtil.cs" />
     <Compile Include="Helper\BinaryHelper.cs" />
@@ -102,55 +106,6 @@
     <Compile Include="公务车数据转发\JsonModel\GDOCVehicleResult.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_DETECTION_1.1.0.240_VS2013_WIN32_06292018\inc\amcomdef.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_DETECTION_1.1.0.240_VS2013_WIN32_06292018\inc\ammem.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_DETECTION_1.1.0.240_VS2013_WIN32_06292018\inc\arcsoft_fsdk_face_detection.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_DETECTION_1.1.0.240_VS2013_WIN32_06292018\inc\asvloffscreen.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_DETECTION_1.1.0.240_VS2013_WIN32_06292018\inc\merror.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_DETECTION_1.1.0.240_VS2013_WIN32_06292018\lib\libarcsoft_fsdk_face_detection.dll" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_DETECTION_1.1.0.240_VS2013_WIN32_06292018\releasenotes.txt" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_DETECTION_1.1.0.240_VS2013_WIN32_06292018\samplecode\samplecode.cpp" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_RECOGNITION_1.1.0.240_VS2013_WIN32_06292018\inc\amcomdef.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_RECOGNITION_1.1.0.240_VS2013_WIN32_06292018\inc\ammem.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_RECOGNITION_1.1.0.240_VS2013_WIN32_06292018\inc\arcsoft_fsdk_face_recognition.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_RECOGNITION_1.1.0.240_VS2013_WIN32_06292018\inc\asvloffscreen.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_RECOGNITION_1.1.0.240_VS2013_WIN32_06292018\inc\merror.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_RECOGNITION_1.1.0.240_VS2013_WIN32_06292018\lib\libarcsoft_fsdk_face_recognition.dll" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_RECOGNITION_1.1.0.240_VS2013_WIN32_06292018\releasenotes.txt" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_RECOGNITION_1.1.0.240_VS2013_WIN32_06292018\samplecode\samplecode.cpp" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.0\inc\amcomdef.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.0\inc\arcsoft_face_sdk.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.0\inc\asvloffscreen.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.0\inc\merror.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.0\lib\X64\libarcsoft_face.dll" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.0\lib\X64\libarcsoft_face_engine.dll" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.0\releasenotes.txt" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.0\samplecode\samplecode.txt" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.1\inc\amcomdef.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.1\inc\arcsoft_face_sdk.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.1\inc\asvloffscreen.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.1\inc\merror.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.1\lib\X64\libarcsoft_face.dll" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.1\lib\X64\libarcsoft_face_engine.dll" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.1\releasenotes.txt" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.1\samplecode\samplecode.txt" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.2\inc\amcomdef.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.2\inc\arcsoft_face_sdk.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.2\inc\asvloffscreen.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.2\inc\merror.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.2\lib\X64\libarcsoft_face.dll" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.2\lib\X64\libarcsoft_face_engine.dll" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.2\releasenotes.txt" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x64_V2.2\samplecode\samplecode.txt" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x86_V2.2\inc\amcomdef.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x86_V2.2\inc\arcsoft_face_sdk.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x86_V2.2\inc\asvloffscreen.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x86_V2.2\inc\merror.h" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x86_V2.2\lib\Win32\libarcsoft_face.dll" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x86_V2.2\lib\Win32\libarcsoft_face_engine.dll" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x86_V2.2\releasenotes.txt" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x86_V2.2\samplecode\samplecode.cpp" />
-    <Content Include="AI\ArcSoft_ArcFace_Windows_x86_V2.2\samplecode\samplecode.txt" />
     <Content Include="Face\Image\cr7_1.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -189,23 +144,6 @@
     <Content Include="Face\V2_2\Lib\x86\libarcsoft_face_engine.dll" />
     <Content Include="公务车数据转发\Docs\公务车转发.png" />
     <Content Include="Email\account.txt" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_AGE_ESTIMATION_1.1.0.240_VS2013_WIN32_06292018.zip" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_DETECTION_1.1.0.240_VS2013_WIN32_06292018.zip" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_DETECTION_1.1.0.240_VS2013_WIN32_06292018\doc\ARCSOFT_FACE_DETECTION_DEVELOPER%27S_GUIDE.pdf" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_DETECTION_1.1.0.240_VS2013_WIN32_06292018\lib\libarcsoft_fsdk_face_detection.lib" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_RECOGNITION_1.1.0.240_VS2013_WIN32_06292018.zip" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_RECOGNITION_1.1.0.240_VS2013_WIN32_06292018\doc\ARCSOFT_FACE_RECOGNITION_DEVELOPER%27S_GUIDE.pdf" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_RECOGNITION_1.1.0.240_VS2013_WIN32_06292018\lib\libarcsoft_fsdk_face_recognition.lib" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_FACE_TRACKING_1.1.0.240_VS2013_WIN32_06292018.zip" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_V1.1_Medium\ARCSOFT_FSDK_GENDER_ESTIMATION_1.1.0.240_VS2013_WIN32_06292018.zip" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_x64_V2.0\doc\ARCSOFT_ARC_FACE_DEVELOPER%27S_GUIDE.pdf" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_x64_V2.0\lib\X64\libarcsoft_face_engine.lib" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_x64_V2.1\doc\ARCSOFT_ARC_FACE_DEVELOPER%27S_GUIDE.pdf" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_x64_V2.1\lib\X64\libarcsoft_face_engine.lib" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_x64_V2.2\doc\ARCSOFT_ARC_FACE_DEVELOPER%27S_GUIDE.pdf" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_x64_V2.2\lib\X64\libarcsoft_face_engine.lib" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_x86_V2.2\doc\ARCSOFT_ARC_FACE_DEVELOPER%27S_GUIDE.pdf" />
-    <None Include="AI\ArcSoft_ArcFace_Windows_x86_V2.2\lib\Win32\libarcsoft_face_engine.lib" />
     <None Include="AI\ARCSOFT_ARC_FACE_DEVELOPER%27S_GUIDE_V2.2.pdf" />
     <None Include="AI\ARCSOFT_FACE_DETECTION_DEVELOPER%27S_GUIDE_V1.1.pdf" />
     <None Include="AI\ARCSOFT_FACE_RECOGNITION_DEVELOPER%27S_GUIDE_V1.1.pdf" />
