--- a/CSharp/CSharp.Model/CSharp.Model.csproj
+++ b/CSharp/CSharp.Model/CSharp.Model.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlarmData.cs" />
     <Compile Include="Monitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteObject.cs" />
