--- a/CSharp/aliyun-net-sdk-core/aliyun-net-sdk-core.vs2017.csproj
+++ b/CSharp/aliyun-net-sdk-core/aliyun-net-sdk-core.vs2017.csproj
@@ -16,6 +16,7 @@
     <AssemblyName>aliyun-net-sdk-core</AssemblyName>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <LangVersion>4</LangVersion>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
