--- a/CSharp/CSharp/CSharp.csproj
+++ b/CSharp/CSharp/CSharp.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="aliyun-net-sdk-dyvmsapi" Version="3.0.0" />
+    <PackageReference Include="aliyun.oss.sdk.core" Version="2.5.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.IO.Pipelines" Version="4.5.3" />
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.4.*" />
