--- a/CSharp/CSharp/CSharp.csproj
+++ b/CSharp/CSharp/CSharp.csproj
@@ -17,10 +17,15 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.6.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CSharp.Manifest\CSharp.Manifest.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="JTB\Xsl\" />
   </ItemGroup>
 
 </Project>
