--- a/CSharp/CSharp/CSharp.csproj
+++ b/CSharp/CSharp/CSharp.csproj
@@ -17,10 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-<<<<<<< HEAD
-=======
     <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
->>>>>>> fe2d0302a17b58329233c29ce8799d0caeebe76e
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.6.0" />
   </ItemGroup>
 
@@ -29,11 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
-<<<<<<< HEAD
     <Folder Include="JTB\Xsl\" />
   </ItemGroup>
 
-=======
+  <ItemGroup>
     <None Update="JTB\J808.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -43,6 +39,4 @@
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
-
->>>>>>> fe2d0302a17b58329233c29ce8799d0caeebe76e
 </Project>
