--- a/CSharp/CSharp.NetFramework/CSharp.NetFramework.csproj
+++ b/CSharp/CSharp.NetFramework/CSharp.NetFramework.csproj
@@ -72,6 +72,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -94,8 +97,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Sms\OneNet\OneNetClient.cs" />
+    <Compile Include="Sms\OneNet\OneNetResultCode.cs" />
+    <Compile Include="Sms\OneNet\OneNetSmsResult.cs" />
     <Compile Include="Tcp\TcpChannelComm.cs" />
     <Compile Include="Tcp\TcpMonitorServer.cs" />
+    <Compile Include="Utility\NewtonSerializer.cs" />
     <Compile Include="Web References\GisService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -106,6 +113,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
