--- a/CSharp/CSharp.UnitTest/App.config
+++ b/CSharp/CSharp.UnitTest/App.config
@@ -15,6 +15,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Sapphire" connectionString="metadata=res://*/SqlServer.Sapphire.csdl|res://*/SqlServer.Sapphire.ssdl|res://*/SqlServer.Sapphire.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-M5DA0GK\MSSQLSERVER01;initial catalog=Sapphire;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="Sapphire" connectionString="metadata=res://*/SqlServer.Sapphire.csdl|res://*/SqlServer.Sapphire.ssdl|res://*/SqlServer.Sapphire.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-M5DA0GK\MSSQLSERVER01;initial catalog=Sapphire;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="Sapphire" connectionString="metadata=res://*/SqlServer.Sapphire.csdl|res://*/SqlServer.Sapphire.ssdl|res://*/SqlServer.Sapphire.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-M5DA0GK\127.0.0.1;initial catalog=SqlTest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
