--- a/CSharp/CSharp/CSharp.csproj
+++ b/CSharp/CSharp/CSharp.csproj
@@ -3,9 +3,29 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <!--<Platforms>AnyCPU;x64</Platforms>-->
-    <RuntimeIdentifiers>win10-x64;osx.10.11-x64</RuntimeIdentifiers>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <LangVersion>8.0</LangVersion>
+    <!--Windows-->
+    <!--<RuntimeIdentifier>win-x64</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win-x86</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win-arm</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win-arm64</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win7-x64</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win7-x86</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win81-x64</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win81-x86</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win81-arm</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win10-x64</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win10-x86</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win10-arm</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>win10-arm64</RuntimeIdentifier>-->
+    <!--Linux-->
+    <!--<RuntimeIdentifier>linux-x64</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>linux-arm</RuntimeIdentifier>-->
+    <!--macOS-->
+    <!--<RuntimeIdentifier>osx-x64</RuntimeIdentifier>-->
+    <!--<RuntimeIdentifier>osx.10.11-x64</RuntimeIdentifier>-->
+    <RuntimeIdentifiers>win10-x64;osx.10.11-x64;win81-x86;win81-x64</RuntimeIdentifiers>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <!--<LangVersion>8.0</LangVersion>-->
   </PropertyGroup>
 
   <ItemGroup>
