--- a/CSharp/CSharp/CSharp.csproj
+++ b/CSharp/CSharp/CSharp.csproj
@@ -29,6 +29,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CSharp.Utility\CSharp.Utility.csproj" />
   </ItemGroup>
 
