--- a/CSharp/CSharp.Framework/CSharp.Framework.csproj
+++ b/CSharp/CSharp.Framework/CSharp.Framework.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
