--- a/CSharp/CSharp.Framework/app.config
+++ b/CSharp/CSharp.Framework/app.config
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
 <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="CSharp.Framework.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <section name="CSharp.Framework.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
 </configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup><applicationSettings>
         <CSharp.Framework.Properties.Settings>
-            <setting name="CSharp_Framework_WebReference_BusinessOrderHttpService"
-                serializeAs="String">
+            <setting name="CSharp_Framework_WebReference_BusinessOrderHttpService" serializeAs="String">
                 <value>http://118.122.90.78:9080/esb//services/CYZY_ProxyESB_Service</value>
             </setting>
         </CSharp.Framework.Properties.Settings>
